get width and height off of add
VPAIDAdChoices.js find first iframe… assumes it has a VPAID ad, and gets height and width.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "js/VPAIDHTML5Client.js",
   "scripts": {
     "start": "gulp serve",
-    "test": "gulp test:ci"
+    "test": "gulp test:ci",
+	"deploy": "gulp deploy:demo"
   },
   "repository": {
     "type": "git",
